--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  margin-right: 60px;
+  margin-left: 60px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  }
+
+.header__title {
+  display: flex;
+}
+
+.header__search {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header__title-logo {
+  height: 200px;
+  width: 200px;
+  margin-top: 48px;
+  border-radius: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header__title-text {
+   height: 84px;
+  width: 352px;
+  margin-top: 98px;
+  border-radius: 0px;
+  font-family: Roboto;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 84px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #000000;
+}
+
+.search {
+  height: 80px;
+  width: 600px;
+  margin-top: 100px;
+  padding-left: 10px;
+  border-radius: 20px;
+  margin-right: -30px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 56px;
+  color: #B2B2B2;
+}
+
+.search:focus {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 56px;
+
+  color: #000000;
+
+}
+
+.loop {
+  height: 30px;
+  width: 30px;
+}
+
+.table__head {
+  display: flex;
+  position: absolute;
+  height: 80px;
+  left: 60px;
+  right: 60px;
+  top: 240px;
+
+  background: #2196F3;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+}
+
+.table__icon {
+  width: 5%;
+}
+
+.table__icon-text {
+  width: 25px;
+  height: 28px;
+  margin-left: 30px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+
+  color: #FFFFFF;
+}
+
+.table__country {
+  width: 63%;
+  border-left: 1px solid #FFFFFF;
+  border-right: 1px solid #FFFFFF;
+}
+
+.table__country-text {
+  width: 86px;
+  height: 28px;
+  margin-left: 23px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+
+  color: #FFFFFF;
+}
+
+.table__total-text {
+   width: 173px;
+  height: 28px;
+  margin-left: 14px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+
+  color: #FFFFFF;
 }
