--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  }
+}
 
 .header__title {
   display: flex;
@@ -28,7 +28,7 @@
 }
 
 .header__title-text {
-   height: 84px;
+  height: 84px;
   width: 352px;
   margin-top: 98px;
   border-radius: 0px;
@@ -54,7 +54,7 @@
   font-weight: normal;
   font-size: 48px;
   line-height: 56px;
-  color: #B2B2B2;
+  color: #b2b2b2;
 }
 
 .search:focus {
@@ -65,7 +65,6 @@
   line-height: 56px;
 
   color: #000000;
-
 }
 
 .loop {
@@ -75,13 +74,8 @@
 
 .table__head {
   display: flex;
-  position: absolute;
   height: 80px;
-  left: 60px;
-  right: 60px;
-  top: 240px;
-
-  background: #2196F3;
+  background: #2196f3;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
 }
@@ -91,8 +85,6 @@
 }
 
 .table__icon-text {
-  width: 25px;
-  height: 28px;
   margin-left: 30px;
 
   font-family: Roboto;
@@ -101,18 +93,16 @@
   font-size: 24px;
   line-height: 28px;
 
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .table__country {
   width: 63%;
-  border-left: 1px solid #FFFFFF;
-  border-right: 1px solid #FFFFFF;
+  border-left: 1px solid #ffffff;
+  border-right: 1px solid #ffffff;
 }
 
 .table__country-text {
-  width: 86px;
-  height: 28px;
   margin-left: 23px;
 
   font-family: Roboto;
@@ -121,12 +111,10 @@
   font-size: 24px;
   line-height: 28px;
 
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .table__total-text {
-   width: 173px;
-  height: 28px;
   margin-left: 14px;
 
   font-family: Roboto;
@@ -135,7 +123,7 @@
   font-size: 24px;
   line-height: 28px;
 
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .table__body {
